--- a/transaction/src/main/resources/templates/test/test.html
+++ b/transaction/src/main/resources/templates/test/test.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"  >
     <title>테스트</title>	
-	<link rel="stylesheet" type="text/css" th:href="@{/CSS/com/com.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/CSS/com/modal.css}">        
+    <link rel="stylesheet" type="text/css" th:href="@{/CSS/com/com.css}">    
+    <script type="text/javascript" th:src="@{/JS/utlt/modal.js}"></script>    
+    <script type="text/javascript" th:src="@{/JS/utlt/com.js}"></script>  
 </head>
 <body>
-	<h4>테스트</h4>
+    <h4>
+        <ul class="nav flex-column" th:replace="view/layout/menuBar.html"></ul>
+    </h4>
+    
+    <div class="container01"> 
+        <div class="div_title01">검색영역</div>
+            <div class="div_body01" style="position: relative;">
+             </div>
+        </div>
+    </div>
+    <div class="container01">    
+        <div class="div_title01">조회영역</div>          
+            <div class="div_body01">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
