--- a/transaction/src/main/resources/templates/view/weeklyAllocation/weeklyAllocationView.html
+++ b/transaction/src/main/resources/templates/view/weeklyAllocation/weeklyAllocationView.html
@@ -23,7 +23,7 @@
 			<input type="date" id="S_END_YMD" name="S_END_YMD" class="full-width-input02" th:value="${not #strings.isEmpty(S_END_YMD)} ? ${S_END_YMD} : ${#temporals.format(#temporals.createNow(), 'yyyy-MM-dd')}">
 			<label for="주식명">주식명 :</label>
 			<input type="text" id="S_STCNM" name="S_STCNM" placeholder="주식명" class="full-width-input" th:value="${parameter?.S_STCNM}">
-			      <button  class="register-button">검색</button><!--					onclick="search()"-->
+			      <button  class="search-button">검색</button><!--					onclick="search()"-->
 		 </form>   
 	</div>
 <!--	<button onclick="downloadExcel()">엑셀다운로드</button>	
